--- a/agencia de viagens/style.css
+++ b/agencia de viagens/style.css
@@ -1,51 +1,75 @@
 *{
-    padding: 0;
-    margin: 0;
-}
-body{
-    font-size: 20px;
-    color: white;
-    text-shadow: black;
-    text-align: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    display: block;
+    padding: 0%;
+    margin: 0%;
 }
 header{
-    width: 100%;
-    height: 250px;
-    background-color: #333;
-    float: left;
+    background-color: pink;
+    color: black;
+    font-size: x-large;
+    text-align: center;
+    width: 98%;
+    height: auto;
+    margin: 10px;
+    border-radius: 16px;
+    box-shadow: 0 0 10px;
 }
-.SidebarA{
-    width: 25%;
-    height: 800px;
-    background-color: blue;
-    float: left;
-}
-main{
-    width: 50%;
-    height: 800px;
-    background-color: blueviolet;
-    float: left;
-
-}
-.SidebarB{
-    width: 25%;
-    height: 800px;
-    background-color: blue;
-    float: right;
-}
-footer{
-    width: 100%;
+.sidebarA{
+    border-radius: 16px;
+    box-shadow: 0 0 10px;
+    text-align: left;
+    width: 98%;
+    font-size: 20px;
     height: 150px;
-    background-color: black;
-    float: left;
+    margin: 10px;
+}
+.main{
+    display: flex;
+    justify-content: space-between;
+}
+.container{
+    font-size: large;
+    margin: 20px;
+    border-radius: 16px;
+    box-shadow: 0 0 10px;
+    text-align: center;
+    width: 450px;
+    height: 350px;
+    align-items: center;
 }
 .paises{
-    width: 300px;
-    height: 200px;
-    justify-content: space-between;
-    margin-top: 40px;
+    margin-top: 20px;
     border-radius: 16px;
-    box-shadow: 1px #333;
+    width: 300px;
+    height: 150px;
+}
+.oswald{
+  font-family: "Oswald", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: weight;
+  font-style: normal;
+  margin-left: 10px;
+}
+button {
+    width: 200px;
+    padding: 12px;
+    background-color: pink;
+    color: white;
+    border: none;
+    border-radius: 7px;
+    cursor: pointer;
+    transition: transform 1s;
+    font-size: small;
+    margin: 20px;
+}
+button:hover,button:focus {
+  background: rgb(238, 163, 175);
+  transform: translateX(10px) scale(1.2);
+}
+footer{
+    background-color: pink;
+    border-radius: 16px;
+    margin: 10px;
+    width: 98%;
+    height: 20px;
+    text-align: center;
 }
