--- a/site sobre alguma coisa/sobrenos.css
+++ b/site sobre alguma coisa/sobrenos.css
@@ -26,7 +26,7 @@ header{
     height: 90px;
     justify-content: space-between;
     text-align: right;
-    background-color: rgb(201, 201, 201);
+    background-color: rgb(102, 67, 49);
     color: #ffffff;
 }
 header nav {
@@ -40,16 +40,15 @@ header nav a {
 }
 
 .container{
-    background-image: url(comidas/restaurante.jpg);
+    background-image: url(comidas/café.jpeg);
+    background-repeat: no-repeat;
+    background-size: 100%;
     width: auto;
     height: 150px;
     padding: 15% 30px;
-    font-size: 60px;
     color: #fff;
+    font-size: 30px;
     text-align: center;
-}
-h1{
-    font-size: 60px;
 }
 h3{
     font-size: 40px;
@@ -62,9 +61,11 @@ h3{
     text-align: left;
 }
 footer{
-    background-color: rgb(201, 201, 201);
+    background-color: rgb(102, 67, 49);
     width: auto;
+    height: auto;
     padding: 20px;
     text-align: center;
     color:#fff;
+    font-size: 16px;
 }
