--- a/testes/style.css
+++ b/testes/style.css
@@ -26,7 +26,7 @@ body{
 .search-box{
     position: absolute;
     top: 15px;
-    right: 50px;
+    right: 70px;
     height: 30px;
     padding: 10px;
     border-radius: 40px;
@@ -64,6 +64,9 @@ body{
     background-color: #ffffff;
 }
 .notification-icon{
+    position: absolute;
+    top: 13px;
+    right: 27px;
     width: 24px;
     height: 24px;
     background-color: transparent;
@@ -71,10 +74,13 @@ body{
     cursor: pointer;
 }
 .profile-icon{
+    position: absolute;
+    top: 13px;
+    right: 10px;
     width: 24px;
     height: 24px;
     background-color: transparent;
     border: none;
+    border-radius: 5px;
     cursor: pointer;
-    display: inline-block;
 }
